--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body {
             background-color: rgb(66, 66, 66);
             color: rgb(48, 48, 48);
-            background-image: url(../ee.gif);
+            background-image: url(../a.gif);
             background-size: cover;
             background-repeat: no-repeat;
             background-repeat:repeat;
@@ -31,6 +31,8 @@
             position: relative;
             -webkit-text-stroke: 1px black; /* width and color */
 	        top: 200px;
+            font-smooth: never;
+            -webkit-font-smoothing : none;
         }
 
         h2 {
@@ -150,7 +152,7 @@
     </nav>
 
 
-    <h1><span style="font-size:100px;">Welcome!</span></h1>
+    <h1><span style="font-size:100px;">Welkom!</span></h1>
     <h2>
         <Dit is mijn website voor O&O projecten.</h2>
             <h3>ik ben kevin kang op het kkc^^</h3>
