--- a/1ste klas.html
+++ b/1ste klas.html
@@ -9,7 +9,7 @@
         body {
             background-color: rgb(66, 66, 66);
             color: rgb(48, 48, 48);
-            background-image: url(../a.gif);
+            background-image: url(../b22aa22b2f3f55b6468361158d52e2e7.gif);
             background-size: cover;
             background-repeat: no-repeat;
             background-repeat:repeat;
