--- a/SMART1.html
+++ b/SMART1.html
@@ -2,6 +2,8 @@
 <html>
 <link rel="stylesheet" href="style.css">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
+     crossorigin="anonymous"></script>
     <title>Projecten</title>
     <style>
         body {
