--- a/contact.htm
+++ b/contact.htm
@@ -2,6 +2,8 @@
 <html lang="en">
 <link rel="stylesheet" href="style.css">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
+     crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
