--- a/1ste klas.html
+++ b/1ste klas.html
@@ -150,20 +150,11 @@
 
 
         <span>
-        <p><span style="font-size:30px;">je kan op de plaatje kikker om de project te bekijken</span></p>
-         <a href="Flori1.html" target="_blank">
-        <img src="floriworld_compleet.jpg" />
-        <p>-
-        -
-        -
-        </p>
-        <a href="Cobra.html" target="_blank">
-        <img src="Cobra_Collection_PT_Maart-2015_MG_7894-768x512.jpg" />
-        </a>
+            <h1><a href="Flori1.html" class="button3">Project 1 Floriworld</a></h1>
+            <h1><a href="Cobra.html" class="button3">Project 2 Cobra</a></h1>
+
         </span>
 
-
-        <p2>.</p2>
 
 
 
