--- a/ProjectEMA.html
+++ b/ProjectEMA.html
@@ -152,6 +152,7 @@
         <h1>dit keer moesten we een ballastbed bedenken voor EMA,<br></h1>
         <h1> en wij hadden op het idee gekomen met een soort hek.<br></h1>
         <h1>Het hek is 2 kunstmatige heuvels gemaakt door alleminimum of foam.<br></h1>
+        <h1>Beneden zit Tekeningen.</h1>
         <img src="team6.png" alt="" style="width:700px;height:400px;">
         <p>concept art1</p>
         <img src="Naamloos.png" alt="" style="width:700px;height:400px;">
