--- a/2ste klas.html
+++ b/2ste klas.html
@@ -149,19 +149,10 @@
             
         </ul>
     </nav>
+    <h1><a href="2k1.html" class="button3">Project 1 Robot</a></h1>
+    <h1><a href="2k2.html" class="button3">Project 2 VirusKenner</a></h1>
+    <h1><a href="ProjectEMA.html" class="button3">Project 3 Project EMA</a></h1>
 
-
-    <a href="2k1.html" target="_blank">
-        <img src="logo-512-512.png" />
-
-
-    <a href="2k2.html" target="_blank">
-        <img src="logo-viruskenner-UK-.jpg" />
-        <h1>-</h1>
-    <a href="ProjectEMA.html" target="_blank">
-        <img src="train.png" />
-
-        <p2>.</p2>
 
 
 
