--- a/2k1.html
+++ b/2k1.html
@@ -156,17 +156,17 @@
     <h1>we moesten met Node-red een TJbot maken met raspberry pi</h1>
     <h1>maar ik had als laatst met HTML en C sharp het gemaakt :p</h1>
     <h1>we hadden een speech to text gemaakt met google cloud service</h1>
-    <img src="21 concept drawing.jpeg" alt="" style="width:700px;height:600px;">
+    <img src="Pictures/21 concept drawing.jpeg" alt="" style="width:700px;height:600px;">
     <p>concept art</p>
     <p>-</p>
     <p>-</p>
     <p>-</p>
-    <img src="21prototype.jpeg" alt="" style="width:600px;height:800px;">
+    <img src="Pictures/21prototype.jpeg" alt="" style="width:600px;height:800px;">
     <p>prototype</p>
     <p>-</p>
     <p>-</p>
     <p>-</p>
-    <img src="eindproduct.jpeg" alt="" style="width:700px;height:600px;">
+    <img src="Pictures/eindproduct.jpeg" alt="" style="width:700px;height:600px;">
     <p>eindproduct</p>
     
 
