--- a/Portfolio.html
+++ b/Portfolio.html
@@ -158,10 +158,10 @@
     <h1>Ik hou niet van talen leren :(</h1>
     <h1>Ik heb zelf nog een andere website die niet voor school is.</h1>
     <h1>Ik heb met mijn vrienden een MC server. Ik heb het website en wat plugins gemaakt.</h1>
-    <h1><img src="scirpt.png" alt="" style="width:1000px;height:600px;"></h1>
-    <h1><img src="vrplayer.png" alt="" style="width:1000px;height:600px;"></h1>
-    <h1><img src="image0.png" alt="" style="width:1000px;height:700px;"></h1>
-    <h1><img src="foto1.jpeg" alt="" style="width:1000px;height:700px;"></h1>
+    <h1><img src="Pictures/scirpt.png" alt="" style="width:1000px;height:600px;"></h1>
+    <h1><img src="Pictures/vrplayer.png" alt="" style="width:1000px;height:600px;"></h1>
+    <h1><img src="Pictures/image0.png" alt="" style="width:1000px;height:700px;"></h1>
+    <h1><img src="Pictures/foto1.jpeg" alt="" style="width:1000px;height:700px;"></h1>
 
 
 
