--- a/ProjectEMA.html
+++ b/ProjectEMA.html
@@ -153,12 +153,12 @@
         <h1> en wij hadden op het idee gekomen met een soort hek.<br></h1>
         <h1>Het hek is 2 kunstmatige heuvels gemaakt door alleminimum of foam.<br></h1>
         <h1>Beneden zit Tekeningen.</h1>
-        <img src="team6.png" alt="" style="width:700px;height:400px;">
+        <img src="Pictures/team6.png" alt="" style="width:700px;height:400px;">
         <p>concept art1</p>
-        <img src="Naamloos.png" alt="" style="width:700px;height:400px;">
+        <img src="Pictures/Naamloos.png" alt="" style="width:700px;height:400px;">
         <p>Concept art2</p>
 
-        <img src="prototypeeee.jpeg" alt="" style="width:700px;height:400px;">
+        <img src="Pictures/prototypeeee.jpeg" alt="" style="width:700px;height:400px;">
         <p>Prototype</p>
 
         <p2>.</p2>
