--- a/2k1.html
+++ b/2k1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="2825704.gif" href="2825704.gif">
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
@@ -29,9 +30,9 @@
     <h1>We hadden eerst een opdrachtgever gezocht en we hadden op het secrataris van roda gekomen</h1>
     <h1>we moesten iets maken over racisme met gebreuk van een TJbot</h1>
     <h1>we moesten met Node-red een TJbot maken met raspberry pi</h1>
-    <h1>maar ik had als laatst met HTML en C sharp het gemaakt :p</h1>
-    <h1>we hadden een speech to text gemaakt met google cloud service</h1></center>
-    <img src="Pictures/21 concept drawing.jpeg" alt="" style="width:700px;height:600px;">
+    <h1>we hadden een speech to text gemaakt met google cloud service</h1>
+    <p>-</p>
+    <h1><img src="Pictures/21 concept drawing.jpeg" alt="" style="width:700px;height:600px;"></h1>
     <p>concept art</p>
     <p>-</p>
     <p>-</p>
@@ -42,7 +43,7 @@
     <p>-</p>
     <p>-</p>
     <img src="Pictures/eindproduct.jpeg" alt="" style="width:700px;height:600px;">
-    <p>eindproduct</p>
+    <p>eindproduct</p></center>
     
 
 
