--- a/2k2.html
+++ b/2k2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="2825704.gif" href="2825704.gif">
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
@@ -41,11 +42,11 @@
         we hadden toen het hanta virus uitgekozen voor onderzoek<br>
         we hadden het idee van een video en poster spreaden zo dat iedereen kan weten wat het hanta virus is.<br>
         we hebben ook een website, dat is Hantavirus.tk <br>
-        </h1></center>
+        </h1>
         <h1></h1>
-        <h1><span><iframe src="hantavirus.mp4" class="centerImage"></iframe></span></h1>
-        <h1><a href="hantavirus.tk" target="_self"><span style="font-size:24px;">Hanta web</span></a></h1>
-        <h1><iframe src="https://onedrive.live.com/embed?cid=2C986944625B03B8&resid=2C986944625B03B8%21666420&authkey=ANnNNN5xUAFDTtA&em=2" width="1600" height="900" frameborder="0" scrolling="no"></iframe></h1>
+        <h1><iframe src="hantavirus.mp4" class="centerImage"></iframe></h1><br>
+        <h1><a href="Hantavirus.tk" class="button3">Hanta Web</a></h1><br>
+        <h1><iframe src="https://onedrive.live.com/embed?cid=2C986944625B03B8&resid=2C986944625B03B8%21666420&authkey=ANnNNN5xUAFDTtA&em=2" width="640" height="360" frameborder="0" scrolling="no"></iframe></h1></center>
 
     <p>.</p>
 
