--- a/3ste klas.html
+++ b/3ste klas.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="2825704.gif" href="2825704.gif">
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
@@ -27,7 +28,7 @@
         </ul>
     </nav>
 
-    <center><h1><a href="VoedselBos.html" class="button3">Project 1 Voedsel bos</a></h1></center>
+    <center><h2><a href="VoedselBos.html" class="button3">Project 1 Voedsel bos</a></h2></center>
 
 
         <p2>.</p2>
