--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="2825704.gif" href="2825704.gif">
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
@@ -29,16 +30,13 @@
    
 
     <center><h1>Ik ben kevin, en ik kom uit China.</h1>
-    <h1>Ik maak mijn eigen games in unity.</h1>
-    <h1>Ik maak animaties in SFM.</h1>
-    <h1>Ik hou van Anime/Manga/Manhua kijken.</h1>
-    <h1>Ik hou niet van talen leren :(</h1>
-    <h1>Ik heb zelf nog een andere website die niet voor school is.</h1>
-    <h1>Ik heb met mijn vrienden een MC server. Ik heb het website en wat plugins gemaakt.</h1></center>
-    <h1><img src="Pictures/scirpt.png" alt="" style="width:1000px;height:600px;"></h1>
+    <h1>Ik heb 4 jaar ervaring met Unity en C#</h1>
+    <h1>Ik ben goed met Beta vakken, maar heel erg slecht met talen.</h1>
+    <h1>Hier beneden kunt u zien wat ik vroeger had gedaan:</h1></center>
+    <center><h1><img src="Pictures/scirpt.png" alt="" style="width:1000px;height:600px;"></h1>
     <h1><img src="Pictures/vrplayer.png" alt="" style="width:1000px;height:600px;"></h1>
     <h1><img src="Pictures/image0.png" alt="" style="width:1000px;height:700px;"></h1>
-    <h1><img src="Pictures/foto1.jpeg" alt="" style="width:1000px;height:700px;"></h1>
+    <h1><img src="Pictures/foto1.jpeg" alt="" style="width:1000px;height:700px;"></h1></center>
 
 
 
