--- a/ProjectEMA.html
+++ b/ProjectEMA.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="2825704.gif" href="2825704.gif">
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
@@ -28,16 +29,10 @@
         <h1>dit was het laatste project van dit jaar. <br></h1>
         <h1>dit keer moesten we een ballastbed bedenken voor EMA,<br></h1>
         <h1> en wij hadden op het idee gekomen met een soort hek.<br></h1>
-        <h1>Het hek is 2 kunstmatige heuvels gemaakt door alleminimum of foam.<br></h1>
-        <h1>Beneden zit Tekeningen.</h1></center>
-        <img src="Pictures/team6.png" alt="" style="width:700px;height:400px;">
-        <p>concept art1</p>
-        <img src="Pictures/Naamloos.png" alt="" style="width:700px;height:400px;">
-        <p>Concept art2</p>
-
-        <img src="Pictures/prototypeeee.jpeg" alt="" style="width:700px;height:400px;">
-        <p>Prototype</p>
-
+        <h1>Het hek is 2 kunstmatige heuvels gemaakt door alleminimum of foam.</h1>
+        <h1><img src="Pictures/team6.png" alt="" style="width:700px;height:400px;"></h1>
+        <h1><img src="Pictures/Naamloos.png" alt="" style="width:700px;height:400px;"></h1>
+        <h1><img src="Pictures/prototypeeee.jpeg" alt="" style="width:700px;height:400px;"></h1></center>
         <p2>.</p2>
 
 
