--- a/1ste klas.html
+++ b/1ste klas.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="2825704.gif" href="2825704.gif">
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
@@ -32,8 +33,8 @@
 
 
         <span>
-            <center><h1><a href="Flori1.html" class="button3">Project 1 Floriworld</a></h1></center>
-            <center><h1><a href="Cobra.html" class="button3">Project 2 Cobra</a></h1></center>
+            <center><h2><a href="Flori1.html" class="button3">Project 1 Floriworld</a></h2></center>
+            <center><h2><a href="Cobra.html" class="button3">Project 2 Cobra</a></h2></center>
 
         </span>
 
