--- a/2ste klas.html
+++ b/2ste klas.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="2825704.gif" href="2825704.gif">
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
@@ -26,9 +27,9 @@
             
         </ul>
     </nav>
-    <center><h1><a href="2k1.html" class="button3">Project 1 Robot</a></h1>
-    <h1><a href="2k2.html" class="button3">Project 2 VirusKenner</a></h1>
-    <h1><a href="ProjectEMA.html" class="button3">Project 3 Project EMA</a></h1></center>
+    <center><h2><a href="2k1.html" class="button3">Project 1 TJbot</a></h2>
+    <h2><a href="2k2.html" class="button3">Project 2 VirusKenner</a></h2>
+    <h2><a href="ProjectEMA.html" class="button3">Project 3 Project EMA</a></h2></center>
 
 
 
