--- a/Cobra.html
+++ b/Cobra.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="EEE1" href="Pictures/EEE1.jfif">
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
@@ -22,10 +23,9 @@
         </ul>
     </nav>
 
-    <center><p>onze plan voor scenes</p></center>
-    <div><iframe src="https://app.milanote.com/1LrzbT1Vw3R4dd?p=65WCcoiwHWP" width="1000" height="600" frameborder="0"></iframe></div>
-    <p>.</p>
-    <div><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT-_IZKIdH0WQF4t_gsotYS4zX9kbX5rv8qEVuq8QKnfh5hS3Da6QdepoFSbm-Zxa3Ul93uCsdWyyvt/embed?start=true&loop=true&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></div>
+    <center><p>onze plan voor scenes</p><br>
+    <h1><iframe src="https://app.milanote.com/1LrzbT1Vw3R4dd?p=65WCcoiwHWP" width="1000" height="600" frameborder="0"></iframe></h1><br>
+    <h1><iframe src="https://docs.google.com/presentation/d/e/2PACX-1vT-_IZKIdH0WQF4t_gsotYS4zX9kbX5rv8qEVuq8QKnfh5hS3Da6QdepoFSbm-Zxa3Ul93uCsdWyyvt/embed?start=true&loop=true&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></h1></center>
         <p2>.</p2>
 
 
