--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
     <title>Page 2</title>
-    <link rel="icon" type="pixel-city-chill.gif" href="pixel-city-chill.gif">
+    <link rel="icon" type="2825704.gif" href="2825704.gif">
 
 </head>
      
