--- a/2k2.html
+++ b/2k2.html
@@ -17,7 +17,14 @@
         <ul>
 
             <a href="index.html" class="button3">Home</a>
-            <a href="page2.html" class="button3">Projecten</a>
+            <div class="dropdown">
+                <a class="dropbtn">Projecten</a>
+                <div class="dropdown-content">
+                  <a href="1ste klas.html">Eerste klas</a>
+                  <a href="2ste klas.html">Tweede klas</a>
+                  <a href="3ste klas.html">Derde klas</a>
+                </div>
+              </div>
             <a href="Portfolio.html" class="button3">Portfolio</a>
             <a href="https://kamuistudio.itch.io/" class="button3">Itch.io</a>
             
