--- a/1ste klas.html
+++ b/1ste klas.html
@@ -21,7 +21,14 @@
         <ul>
 
             <a href="index.html" class="button3">Home</a>
-            <a href="page2.html" class="button3">Projecten</a>
+            <div class="dropdown">
+                <a class="dropbtn">Projecten</a>
+                <div class="dropdown-content">
+                  <a href="1ste klas.html">Eerste klas</a>
+                  <a href="2ste klas.html">Tweede klas</a>
+                  <a href="3ste klas.html">Derde klas</a>
+                </div>
+              </div>
             <a href="Portfolio.html" class="button3">Portfolio</a>
             <a href="https://kamuistudio.itch.io/" class="button3">Itch.io</a>
             
@@ -32,9 +39,15 @@
     </nav>
 
 
-        <span>
-            <center><h2><a href="Flori1.html" class="button3">Project 1 Floriworld</a></h2></center>
-            <center><h2><a href="Cobra.html" class="button3">Project 2 Cobra</a></h2></center>
+        <span><br>
+            <center><div class="container">
+                <img src="Pictures/FloriLOGO.jpg" alt="Flori1.html">
+                <a href="Flori1.html" class="btn">Lees meer</a>
+              </div></center><br>
+              <center><div class="container">
+                <img src="Pictures/EEE1.jfif" alt="Cobra">
+                <a href="Cobra.html" class="btn">Lees meer</a>
+              </div></center><br>
 
         </span>
 
