--- a/Flori1.html
+++ b/Flori1.html
@@ -26,7 +26,7 @@
                   <a href="3ste klas.html">Derde klas</a>
                 </div>
               </div>
-            <a href="Portfolio.html" class="button3">Portfolio</a>
+            <a href="Portfolio.html" class="button3">Over mij</a>
             <a href="https://kamuistudio.itch.io/" class="button3">Itch.io</a>
             
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
