--- a/VoedselBos.html
+++ b/VoedselBos.html
@@ -24,7 +24,7 @@
                   <a href="3ste klas.html">Derde klas</a>
                 </div>
               </div>
-            <a href="Portfolio.html" class="button3">Portfolio</a>
+            <a href="Portfolio.html" class="button3">Over mij</a>
             <a href="https://kamuistudio.itch.io/" class="button3">Itch.io</a>
             
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
@@ -33,11 +33,11 @@
         </ul>
     </nav>
         <center><h1>Voedsel bos</h1>
-        <h1>dit was het eerste project van dit jaar.<br></h1>
-        <h1>we moesten een voedsel bos maken.<br></h1>
-        <h1>ik zat samen in een team met Xinxin Daniel en Lars.<br></h1>
-        <h1>We deden eerst onderzoek, over wat wat kan en wat niet kan.<br></h1>
-        <h1>Lars en Daniel ging dan een maquete maken, en ik en xinxin ging een VR application maken.</h1>
+        <h2>dit was het eerste project van dit jaar.</h1>
+        <h2>we moesten een voedsel bos maken.<br></h2>
+        <h2>ik zat samen in een team met Xinxin Daniel en Lars.<br></h2>
+        <h2>We deden eerst onderzoek, over wat wat kan en wat niet kan.<br></h2>
+        <h2>Lars en Daniel ging dan een maquete maken, en ik en xinxin ging een VR application maken.</h2>
         <h2><div><img src="Pictures/Vconcept.jpg" alt="" style="width:700px;height:400px;"></div></h2>
         <p>concept art</p>
         <h2><div><iframe src="VConcept2.mp4" class="centerImage" alt="" width="852px" height="480px"></iframe></div></h2>
