--- a/Cobra.html
+++ b/Cobra.html
@@ -25,7 +25,7 @@
                   <a href="3ste klas.html">Derde klas</a>
                 </div>
               </div>
-            <a href="Portfolio.html" class="button3">Portfolio</a>
+            <a href="Portfolio.html" class="button3">Over mij</a>
             <a href="https://kamuistudio.itch.io/" class="button3">Itch.io</a>
         </ul>
     </nav>
