--- a/3ste klas.html
+++ b/3ste klas.html
@@ -35,8 +35,13 @@
         </ul>
     </nav><br>
     <center><div class="container">
-        <img src="Pictures/image-20221004-134247-754c9f80.jpeg" alt="VoedselBos">
+        <h5><img src="Pictures/image-20221004-134247-754c9f80.jpeg" alt="VoedselBos"></h5>
         <a href="VoedselBos.html" class="btn">Lees meer</a>
+      </div></center><br>
+
+      <center><div class="container">
+        <h5><img src="Pictures/TinoLOGO.png" alt="VoedselBos"></h5>
+        <a href="Tino.html" class="btn">Lees meer</a>
       </div></center><br>
 
 
