--- a/3ste klas.html
+++ b/3ste klas.html
@@ -40,8 +40,13 @@
       </div></center><br>
 
       <center><div class="container">
-        <h5><img src="Pictures/TinoLOGO.png" alt="VoedselBos"></h5>
+        <h5><img src="Pictures/TinoLOGO.png" alt="Tino"></h5>
         <a href="Tino.html" class="btn">Lees meer</a>
+      </div></center><br>
+
+      <center><div class="container">
+        <h5><img src="Pictures/KPN.jpg" alt="KPN"></h5>
+        <a href="ProjectKPN.html" class="btn">Lees meer</a>
       </div></center><br>
 
 
