--- a/ProjectKPN.html
+++ b/ProjectKPN.html
@@ -5,7 +5,7 @@
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
-    <title>Projecten</title>
+    <title>Project KPN</title>
 
 
 
@@ -30,45 +30,20 @@
             
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
             crossorigin="anonymous"></script>
-        </ul>
-    </nav>
-
-
-</head>
-
-<body>
-
-    <nav>
-        <ul>
-
             
         </ul>
     </nav>
-    <center><h1>We starte met het werken met sprinten. <br>
-        we hadden daarna het italiaanse kinderen gezien.<br>
-        we hadden toen het hanta virus uitgekozen voor onderzoek<br>
-        we hadden het idee van een video en poster spreaden zo dat iedereen kan weten wat het hanta virus is.<br>
-        we hebben ook een website, dat is Hantavirus.tk <br>
-        </h1>
-        <h1></h1>
-        <h1><iframe src="hantavirus.mp4" class="centerImage"></iframe></h1><br>
-        <h1><embed src="Our immune system (1).pdf" width="600px" height="800px" /></h1><br>
-        <h1><iframe src="https://onedrive.live.com/embed?cid=2C986944625B03B8&resid=2C986944625B03B8%21666420&authkey=ANnNNN5xUAFDTtA&em=2" width="640" height="360" frameborder="0" scrolling="no"></iframe></h1></center>
 
-    <p>.</p>
+   
 
-        <p2>.</p2>
-
-
-
-</body>
-
-</html>
-
-
-
-
-        <p2>.</p2>
+    <center><h1>Dit was het laatste project van leerjaar 3.</h1>
+    <h1>We kregen een opdracht van KPN, waar we over online bevijliging hadden.</h1>
+    <h1>We moesten leren wat OSINT was, en een OSINT onderzoek doen en daar mee advies geven.</h1>
+    <h1>OSINT, staat voor open source intelegence.</h1>
+    <h1>Het is informatie opzoeken met het media, zoals facebook of instagram.</h1>
+    <h1>we kozen om een OSINT onderzoek te doen aan ons natuurkunde leraar, David Tulner.</h1>
+    <h1>hier onder staat het advies dat we als laatst hadden geschreven.</h1></center>
+    <center><h1><embed src="Advies.pdf" width="800px" height="2100px" /></h1></center>
 
 
 
