bg change and other stuff

--- a/2ste klas.html
+++ b/2ste klas.html
@@ -36,11 +36,11 @@
     </nav><br>
         <center><div class="container">
             <img src="Pictures/tjbot-ibm-kit.jpg" alt="TJbot">
-            <a href="2k1.html" class="btn">Lees meer</a>
+            <a href="TJbot.html" class="btn">Lees meer</a>
           </div></center><br>
           <center><div class="container">
             <img src="Pictures/viruskenner_logo-trento.jpg" alt="VirusKenner">
-            <a href="2k2.html" class="btn">Lees meer</a>
+            <a href="Hanta.html" class="btn">Lees meer</a>
           </div></center><br>
           <center><div class="container">
             <img src="Pictures/electrische-museumtramlijn-amsterdam-tram-ema-haarlemmermeerstation.jpg" alt="EMA">
