--- a/Portfolio.html
+++ b/Portfolio.html
@@ -36,10 +36,10 @@
 
    
 
-    <center><h1>Ik ben kevin, en ik kom uit China.</h1>
-    <h1>Ik heb 4 jaar ervaring met Unity en C#</h1>
-    <h1>Ik ben goed met Beta vakken, maar heel erg slecht met talen.</h1>
-    <h1>Hier beneden kunt u zien wat ik vroeger had gedaan:</h1></center>
+    <center><h1>Ik ben kevin, en ik kom uit China.
+        Ik heb 4 jaar ervaring met Unity en C#<br>
+        Ik ben goed met Beta vakken, maar niet zo goed met talen.<br>
+    </h1></center>
     <center><h1><img src="Pictures/scirpt.png" alt="" style="width:1000px;height:600px;"></h1>
     <h1><img src="Pictures/vrplayer.png" alt="" style="width:1000px;height:600px;"></h1>
     <h1><img src="Pictures/image0.png" alt="" style="width:1000px;height:700px;"></h1>
