--- a/ProjectKPN.html
+++ b/ProjectKPN.html
@@ -43,7 +43,10 @@
     <h1>Het is informatie opzoeken met het media, zoals facebook of instagram.</h1>
     <h1>we kozen om een OSINT onderzoek te doen aan ons natuurkunde leraar, David Tulner.</h1>
     <h1>hier onder staat het advies dat we als laatst hadden geschreven.</h1></center>
-    <center><h1><embed src="Advies.pdf" width="800px" height="2100px" /></h1></center>
+    <center><h1><embed src="PDF/Advies.pdf" width="800px" height="2100px" /></h1></center>
+
+
+    <p2>.</p2>
 
 
 
