--- a/Tino.html
+++ b/Tino.html
@@ -53,7 +53,7 @@
             </div>
           </div>
         
-          <h2><div><iframe src="Delft.mp4" class="centerImage" alt="" width="852px" height="480px"></iframe></div></h2>
+          <h2><div><iframe src="Videos/Delft.mp4" class="centerImage" alt="" width="852px" height="480px"></iframe></div></h2>
 
         <p2>.</p2>
 
