--- a/index.html
+++ b/index.html
@@ -28,17 +28,10 @@
         </ul>
     </nav>
 
-
-    <center><h1><span style="font-size:100px;">Welkom!</span></h1></center>
-    <center><h3>Kevin Kang</h3></center>
-        
-            
-
-
-
-
-
-
+    <div class="center-container">
+        <center><h1><span style="font-size:100px;">Welkom!</span></h1></center>
+        <center><h3>Kevin Kang</h3></center>
+    </div>
 </body>
 
 </html>
