--- a/VoedselBos.html
+++ b/VoedselBos.html
@@ -40,8 +40,8 @@
         <h2>Lars en Daniel ging dan een maquete maken, en ik en xinxin ging een VR application maken.</h2>
         <h2><div><img src="Pictures/Vconcept.jpg" alt="" style="width:700px;height:400px;"></div></h2>
         <p>concept art</p>
-        <h2><div><iframe src="VConcept2.mp4" class="centerImage" alt="" width="852px" height="480px"></iframe></div></h2>
-        <p>VR prototype 1</p></center>
+        <h2><div><iframe src="Videos/movie_005.mp4" class="centerImage" alt="" width="852px" height="480px"></iframe></div></h2>
+        <p>VR showcase</p></center>
 
 
         <p2>.</p2>
