--- a/Portfolio.html
+++ b/Portfolio.html
@@ -39,13 +39,22 @@
     <center><h1>Ik ben kevin, en ik kom uit China.
         Ik heb 4 jaar ervaring met Unity en C#<br>
         Ik ben goed met Beta vakken, maar niet zo goed met talen.<br>
+        Ik speel veel heel veel games. Mijn meest gespeeld games zijn Apex legends en Doom eternal.
     </h1></center>
-    <center><h1><img src="Pictures/scirpt.png" alt="" style="width:1000px;height:600px;"></h1>
-    <h1><img src="Pictures/vrplayer.png" alt="" style="width:1000px;height:600px;"></h1>
-    <h1><img src="Pictures/image0.png" alt="" style="width:1000px;height:700px;"></h1>
-    <h1><img src="Pictures/foto1.jpeg" alt="" style="width:1000px;height:700px;"></h1></center>
-
-
+    <div class="row">
+        <div class="column">
+          <h1><img src="Pictures/scirpt.png" alt="1" class="rounded-corners" style="width:80%"></h1>
+          <h1>Ik programeer in C# en ik maak games in unity.</h1>
+        </div>
+        <div class="column">
+          <h1><img src="Pictures/DoomEternal.jpg" alt="Doom" class="rounded-corners" style="width:80%"></h1>
+          <h1>Ik speel games zoals Doom eternal.</h1>
+        </div>
+        <div class="column">
+          <h1><img src="Pictures/Doggy.jpg" alt="Doggy" class="rounded-corners" style="width:80%"></h1>
+          <h1>En dit is mijn hondje!</h1>
+        </div>
+      </div>
 
 </body>
 
