--- a/ProjectKPN.html
+++ b/ProjectKPN.html
@@ -35,14 +35,12 @@
     </nav>
 
    
+    <center><div class="container">
+        <h1>Dit was het laatste project van leerjaar 3. We kregen een opdracht van KPN, waar we over online bevijliging hadden.</h1>
+        <h1>We moesten leren wat OSINT was, en een OSINT onderzoek doen en daar mee advies geven. OSINT, staat voor open source intelegence. Het is informatie opzoeken met het media, zoals facebook of instagram. </h1>
+        <h1>we kozen om een OSINT onderzoek te doen aan ons natuurkunde leraar, David Tulner. hier onder staat het advies dat we als laatst hadden geschreven.</h1>
+    </div></center>
 
-    <center><h1>Dit was het laatste project van leerjaar 3.</h1>
-    <h1>We kregen een opdracht van KPN, waar we over online bevijliging hadden.</h1>
-    <h1>We moesten leren wat OSINT was, en een OSINT onderzoek doen en daar mee advies geven.</h1>
-    <h1>OSINT, staat voor open source intelegence.</h1>
-    <h1>Het is informatie opzoeken met het media, zoals facebook of instagram.</h1>
-    <h1>we kozen om een OSINT onderzoek te doen aan ons natuurkunde leraar, David Tulner.</h1>
-    <h1>hier onder staat het advies dat we als laatst hadden geschreven.</h1></center>
     <center><h1><embed src="PDF/Advies.pdf" width="800px" height="2100px" /></h1></center>
 
 
