--- a/1ste klas.html
+++ b/1ste klas.html
@@ -32,22 +32,14 @@
         </ul>
     </nav>
 
-
-        <span><br>
-            <center><div class="container">
-                <img src="Pictures/FloriLOGO.jpg" alt="Flori1.html">
-                <a href="Flori1.html" class="btn">Lees meer</a>
-              </div></center><br>
-              <center><div class="container">
-                <img src="Pictures/EEE1.jfif" alt="Cobra">
-                <a href="Cobra.html" class="btn">Lees meer</a>
-              </div></center><br>
-
-        </span>
-
-
-
-
+    <center><div class="container">
+      <img src="Pictures/FloriLOGO.jpg" alt="Flori1.html" class="rounded-corners">
+      <a href="Flori1.html" class="btn">Lees meer</a>
+    </div></center><br>
+    <center><div class="container">
+      <img src="Pictures/EEE1.jfif" alt="Cobra" class="rounded-corners">
+      <a href="Cobra.html" class="btn">Lees meer</a>
+    </div></center><br>
 </body>
 
 </html>
