--- a/2ste klas.html
+++ b/2ste klas.html
@@ -35,15 +35,15 @@
         </ul>
     </nav><br>
         <center><div class="container">
-            <img src="Pictures/tjbot-ibm-kit.jpg" alt="TJbot">
+            <img src="Pictures/tjbot-ibm-kit.jpg" alt="TJbot" class="rounded-corners">
             <a href="TJbot.html" class="btn">Lees meer</a>
           </div></center><br>
           <center><div class="container">
-            <img src="Pictures/viruskenner_logo-trento.jpg" alt="VirusKenner">
+            <img src="Pictures/viruskenner_logo-trento.jpg" alt="VirusKenner" class="rounded-corners">
             <a href="Hanta.html" class="btn">Lees meer</a>
           </div></center><br>
           <center><div class="container">
-            <img src="Pictures/electrische-museumtramlijn-amsterdam-tram-ema-haarlemmermeerstation.jpg" alt="EMA">
+            <img src="Pictures/electrische-museumtramlijn-amsterdam-tram-ema-haarlemmermeerstation.jpg" alt="EMA" class="rounded-corners">
             <a href="ProjectEMA.html" class="btn">Lees meer</a>
           </div></center><br>
 
