--- a/3ste klas.html
+++ b/3ste klas.html
@@ -35,17 +35,17 @@
         </ul>
     </nav><br>
     <center><div class="container">
-        <h5><img src="Pictures/image-20221004-134247-754c9f80.jpeg" alt="VoedselBos"></h5>
+        <h5><img src="Pictures/image-20221004-134247-754c9f80.jpeg" alt="VoedselBos" class="rounded-corners"></h5>
         <a href="VoedselBos.html" class="btn">Lees meer</a>
       </div></center><br>
 
       <center><div class="container">
-        <h5><img src="Pictures/TinoLOGO.png" alt="Tino"></h5>
+        <h5><img src="Pictures/TinoLOGO.png" alt="Tino" class="rounded-corners"></h5>
         <a href="Tino.html" class="btn">Lees meer</a>
       </div></center><br>
 
       <center><div class="container">
-        <h5><img src="Pictures/KPN.jpg" alt="KPN"></h5>
+        <h5><img src="Pictures/KPN.jpg" alt="KPN" class="rounded-corners"></h5>
         <a href="ProjectKPN.html" class="btn">Lees meer</a>
       </div></center><br>
 
