--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
 
     <div class="center-container">
-        <center><h1><span style="font-size:100px;">Welkom!</span></h1></center>
+        <center><h1Second><span style="font-size:100px;">Welkom!</span></h1Second></center>
         <center><h3>Kevin Kang</h3></center>
     </div>
 </body>
