--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
      
 
 <body>
-
     <nav>
         <ul>
             <a href="index.html" class="button3">Home</a>
@@ -28,10 +27,10 @@
         </ul>
     </nav>
 
-    <div class="center-container">
-        <center><h1Second><span style="font-size:100px;">Welkom!</span></h1Second></center>
-        <center><h3>Kevin Kang</h3></center>
-    </div>
+    <br><br><br><br><br>
+        <center><h1 width = '500px'>Welkom</h1></center>
+        <h2 align="center">Mijn naam is kevin</h2>
+    
 </body>
 
 </html>
