--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     </nav>
 
     <br><br><br><br><br>
-        <center><h1 width = '500px'>Welkom</h1></center>
-        <h2 align="center">Mijn naam is kevin</h2>
+        <h1>Kevin Kang</h1>
     
 </body>
 
