--- a/1ste klas.html
+++ b/1ste klas.html
@@ -33,7 +33,7 @@
     </nav>
 
     <center><div class="container">
-      <img src="Pictures/FloriLOGO.jpg" alt="Flori1.html" class="rounded-corners">
+      <img src="Pictures/FloriLOGO.jpg" alt="Flori1.html" class="rounded-corners" width="50px">
       <a href="Flori1.html" class="btn">Lees meer</a>
     </div></center><br>
     <center><div class="container">
