--- a/1ste klas.html
+++ b/1ste klas.html
@@ -31,15 +31,16 @@
             
         </ul>
     </nav>
-
-    <center><div class="container">
-      <img src="Pictures/FloriLOGO.jpg" alt="Flori1.html" class="rounded-corners" width="50px">
-      <a href="Flori1.html" class="btn">Lees meer</a>
-    </div></center><br>
-    <center><div class="container">
-      <img src="Pictures/EEE1.jfif" alt="Cobra" class="rounded-corners">
-      <a href="Cobra.html" class="btn">Lees meer</a>
-    </div></center><br>
+    <div class="row">
+      <div class="column">
+        <h3><img src="Pictures/FloriLOGO.jpg" alt="Flori1.html" class="rounded-corners" style="width:80%"></h3>
+        <h3><a href="Flori1.html" class="btn">Lees meer</a></h3>
+      </div>
+      <div class="column">
+        <h3><img src="Pictures/EEE1.jfif" alt="Cobra" class="rounded-corners" style="width:80%"></h3>
+        <h3><a href="Cobra.html" class="btn">Lees meer</a></h3>
+      </div>
+    </div>
 </body>
 
 </html>
