--- a/2ste klas.html
+++ b/2ste klas.html
@@ -33,21 +33,22 @@
             
             
         </ul>
-    </nav><br>
-        <center><div class="container">
-            <img src="Pictures/tjbot-ibm-kit.jpg" alt="TJbot" class="rounded-corners">
-            <a href="TJbot.html" class="btn">Lees meer</a>
-          </div></center><br>
-          <center><div class="container">
-            <img src="Pictures/viruskenner_logo-trento.jpg" alt="VirusKenner" class="rounded-corners">
-            <a href="Hanta.html" class="btn">Lees meer</a>
-          </div></center><br>
-          <center><div class="container">
-            <img src="Pictures/electrische-museumtramlijn-amsterdam-tram-ema-haarlemmermeerstation.jpg" alt="EMA" class="rounded-corners">
-            <a href="ProjectEMA.html" class="btn">Lees meer</a>
-          </div></center><br>
-
-
+    </nav>
+          <br><br><br><br><br><br><br><br>
+          <div class="row">
+            <div class="column">
+              <h3><img src="Pictures/tjbot-ibm-kit.jpg" alt="TJbot" class="rounded-corners" style="width:80%"></h3>
+              <h3><a href="TJbot.html" class="btn">Lees meer</a></h3>
+            </div>
+            <div class="column">
+              <h3><img src="Pictures/viruskenner_logo-trento.jpg" alt="VirusKenner" class="rounded-corners" style="width:80%"></h3>
+              <h3><a href="Hanta.html" class="btn">Lees meer</a></h3>
+            </div>
+            <div class="column">
+              <h3><img src="Pictures/electrische-museumtramlijn-amsterdam-tram-ema-haarlemmermeerstation.jpg" alt="EMA" class="rounded-corners" style="width:80%"></h3>
+              <h3><a href="ProjectEMA.html" class="btn">Lees meer</a></h3>
+            </div>
+          </div>
 
 
 </body>
