--- a/3ste klas.html
+++ b/3ste klas.html
@@ -33,28 +33,22 @@
             
             
         </ul>
-    </nav><br>
-    <center><div class="container">
-        <h5><img src="Pictures/image-20221004-134247-754c9f80.jpeg" alt="VoedselBos" class="rounded-corners"></h5>
-        <a href="VoedselBos.html" class="btn">Lees meer</a>
-      </div></center><br>
-
-      <center><div class="container">
-        <h5><img src="Pictures/TinoLOGO.png" alt="Tino" class="rounded-corners"></h5>
-        <a href="Tino.html" class="btn">Lees meer</a>
-      </div></center><br>
-
-      <center><div class="container">
-        <h5><img src="Pictures/KPN.jpg" alt="KPN" class="rounded-corners"></h5>
-        <a href="ProjectKPN.html" class="btn">Lees meer</a>
-      </div></center><br>
-
-
-
-        <p2>.</p2>
-
-
-
+    </nav>
+      <br><br><br><br><br><br><br><br>
+          <div class="row">
+            <div class="column">
+              <h3><img src="Pictures/image-20221004-134247-754c9f80.jpeg" alt="VoedselBos" class="rounded-corners" style="width:80%"></h3>
+              <h3><a href="VoedselBos.html" class="btn">Lees meer</a></h3>
+            </div>
+            <div class="column">
+              <h3><img src="Pictures/TinoLOGO.png" alt="Tino" class="rounded-corners" style="width:80%"></h3>
+              <h3><a href="Tino.html" class="btn">Lees meer</a></h3>
+            </div>
+            <div class="column">
+              <h3><img src="Pictures/KPN.jpg" alt="KPN" class="rounded-corners" style="width:80%"></h3>
+              <h3><a href="ProjectKPN.html" class="btn">Lees meer</a></h3>
+            </div>
+          </div>
 </body>
 
 </html>
