--- a/1ste klas.html
+++ b/1ste klas.html
@@ -21,9 +21,9 @@
                   <a href="1ste klas.html">Eerste klas</a>
                   <a href="2ste klas.html">Tweede klas</a>
                   <a href="3ste klas.html">Derde klas</a>
+                  <a href="4deklas.html">Vierde klas</a>
                 </div>
               </div>
-            <a href="Portfolio.html" class="button3">Over mij</a>
             <a href="https://kamuistudio.itch.io/" class="button3">Itch.io</a>
             
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
@@ -34,11 +34,11 @@
     <div class="row">
       <div class="column">
         <h3><img src="Pictures/FloriLOGO.jpg" alt="Flori1.html" class="rounded-corners" style="width:80%"></h3>
-        <h3><a href="Flori1.html" class="btn">Lees meer</a></h3>
+        <h3><a href="Projecten/Flori1.html" class="btn">Lees meer</a></h3>
       </div>
       <div class="column">
         <h3><img src="Pictures/EEE1.jfif" alt="Cobra" class="rounded-corners" style="width:80%"></h3>
-        <h3><a href="Cobra.html" class="btn">Lees meer</a></h3>
+        <h3><a href="Projecten/Cobra.html" class="btn">Lees meer</a></h3>
       </div>
     </div>
 </body>
