--- a/2ste klas.html
+++ b/2ste klas.html
@@ -23,9 +23,9 @@
                   <a href="1ste klas.html">Eerste klas</a>
                   <a href="2ste klas.html">Tweede klas</a>
                   <a href="3ste klas.html">Derde klas</a>
+                  <a href="4deklas.html">Vierde klas</a>
                 </div>
               </div>
-            <a href="Portfolio.html" class="button3">Over mij</a>
             <a href="https://kamuistudio.itch.io/" class="button3">Itch.io</a>
             
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
@@ -38,15 +38,15 @@
           <div class="row">
             <div class="column">
               <h3><img src="Pictures/tjbot-ibm-kit.jpg" alt="TJbot" class="rounded-corners" style="width:80%"></h3>
-              <h3><a href="TJbot.html" class="btn">Lees meer</a></h3>
+              <h3><a href="Projecten/TJbot.html" class="btn">Lees meer</a></h3>
             </div>
             <div class="column">
               <h3><img src="Pictures/viruskenner_logo-trento.jpg" alt="VirusKenner" class="rounded-corners" style="width:80%"></h3>
-              <h3><a href="Hanta.html" class="btn">Lees meer</a></h3>
+              <h3><a href="Projecten/Hanta.html" class="btn">Lees meer</a></h3>
             </div>
             <div class="column">
               <h3><img src="Pictures/electrische-museumtramlijn-amsterdam-tram-ema-haarlemmermeerstation.jpg" alt="EMA" class="rounded-corners" style="width:80%"></h3>
-              <h3><a href="ProjectEMA.html" class="btn">Lees meer</a></h3>
+              <h3><a href="Projecten/ProjectEMA.html" class="btn">Lees meer</a></h3>
             </div>
           </div>
 
