--- a/3ste klas.html
+++ b/3ste klas.html
@@ -23,9 +23,9 @@
                   <a href="1ste klas.html">Eerste klas</a>
                   <a href="2ste klas.html">Tweede klas</a>
                   <a href="3ste klas.html">Derde klas</a>
+                  <a href="4deklas.html">Vierde klas</a>
                 </div>
               </div>
-            <a href="Portfolio.html" class="button3">Over mij</a>
             <a href="https://kamuistudio.itch.io/" class="button3">Itch.io</a>
             
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
@@ -38,15 +38,15 @@
           <div class="row">
             <div class="column">
               <h3><img src="Pictures/image-20221004-134247-754c9f80.jpeg" alt="VoedselBos" class="rounded-corners" style="width:80%"></h3>
-              <h3><a href="VoedselBos.html" class="btn">Lees meer</a></h3>
+              <h3><a href="Projecten/VoedselBos.html" class="btn">Lees meer</a></h3>
             </div>
             <div class="column">
               <h3><img src="Pictures/TinoLOGO.png" alt="Tino" class="rounded-corners" style="width:80%"></h3>
-              <h3><a href="Tino.html" class="btn">Lees meer</a></h3>
+              <h3><a href="Projecten/Tino.html" class="btn">Lees meer</a></h3>
             </div>
             <div class="column">
               <h3><img src="Pictures/KPN.jpg" alt="KPN" class="rounded-corners" style="width:80%"></h3>
-              <h3><a href="ProjectKPN.html" class="btn">Lees meer</a></h3>
+              <h3><a href="Projecten/ProjectKPN.html" class="btn">Lees meer</a></h3>
             </div>
           </div>
 </body>
