--- a/2ste klas.html
+++ b/2ste klas.html
@@ -38,15 +38,15 @@
           <div class="row">
             <div class="column">
               <h3><img src="Pictures/tjbot-ibm-kit.jpg" alt="TJbot" class="rounded-corners" style="width:80%"></h3>
-              <h3><a href="Projecten/TJbot.html" class="btn">Lees meer</a></h3>
+              <h3><a href="Projecten/TJbot.html" class="button3">Lees meer</a></h3>
             </div>
             <div class="column">
               <h3><img src="Pictures/viruskenner_logo-trento.jpg" alt="VirusKenner" class="rounded-corners" style="width:80%"></h3>
-              <h3><a href="Projecten/Hanta.html" class="btn">Lees meer</a></h3>
+              <h3><a href="Projecten/Hanta.html" class="button3">Lees meer</a></h3>
             </div>
             <div class="column">
               <h3><img src="Pictures/electrische-museumtramlijn-amsterdam-tram-ema-haarlemmermeerstation.jpg" alt="EMA" class="rounded-corners" style="width:80%"></h3>
-              <h3><a href="Projecten/ProjectEMA.html" class="btn">Lees meer</a></h3>
+              <h3><a href="Projecten/ProjectEMA.html" class="button3">Lees meer</a></h3>
             </div>
           </div>
 
