--- a/3ste klas.html
+++ b/3ste klas.html
@@ -38,15 +38,15 @@
           <div class="row">
             <div class="column">
               <h3><img src="Pictures/image-20221004-134247-754c9f80.jpeg" alt="VoedselBos" class="rounded-corners" style="width:80%"></h3>
-              <h3><a href="Projecten/VoedselBos.html" class="btn">Lees meer</a></h3>
+              <h3><a href="Projecten/VoedselBos.html" class="button3">Lees meer</a></h3>
             </div>
             <div class="column">
               <h3><img src="Pictures/TinoLOGO.png" alt="Tino" class="rounded-corners" style="width:80%"></h3>
-              <h3><a href="Projecten/Tino.html" class="btn">Lees meer</a></h3>
+              <h3><a href="Projecten/Tino.html" class="button3">Lees meer</a></h3>
             </div>
             <div class="column">
               <h3><img src="Pictures/KPN.jpg" alt="KPN" class="rounded-corners" style="width:80%"></h3>
-              <h3><a href="Projecten/ProjectKPN.html" class="btn">Lees meer</a></h3>
+              <h3><a href="Projecten/ProjectKPN.html" class="button3">Lees meer</a></h3>
             </div>
           </div>
 </body>
