--- a/1ste klas.html
+++ b/1ste klas.html
@@ -34,11 +34,11 @@
     <div class="row">
       <div class="column">
         <h3><img src="Pictures/FloriLOGO.jpg" alt="Flori1.html" class="rounded-corners" style="width:80%"></h3>
-        <h3><a href="Projecten/Flori1.html" class="btn">Lees meer</a></h3>
+        <h3><a href="Projecten/Flori1.html" class="button3">Lees meer</a></h3>
       </div>
       <div class="column">
         <h3><img src="Pictures/EEE1.jfif" alt="Cobra" class="rounded-corners" style="width:80%"></h3>
-        <h3><a href="Projecten/Cobra.html" class="btn">Lees meer</a></h3>
+        <h3><a href="Projecten/Cobra.html" class="button3">Lees meer</a></h3>
       </div>
     </div>
 </body>
