--- a/Projecten/blaashal.html
+++ b/Projecten/blaashal.html
@@ -5,7 +5,7 @@
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
-    <title>KeuzeProject</title>
+    <title>Blaashal</title>
 
 
 
@@ -34,60 +34,71 @@
         </ul>
     </nav>
     <br><br>
-    <center><h1>Blaashal</h1>
+    <center><h1>Keuze project gemeente Amstelveen</h1>
         <br>
-        <h2>We kregen de project van myra om een blaashal opnieuw te ontwerpen. De oude koste veel energie en dus ook veel geld.</h2><br>
-        <h2>We begonnen dit project met brainstormen. <br>
-            We wilden ons focussen op het verminderen van kosten omdat Myra aangaf dat dat een van de grootse problemen was met de blaashal. <br>
-            Om de kosten te verminderen van de blaashal zijn wij gaan kijken naar wat de grootste kosten van de blaashal nu zijn. (Figuur 1)</h2></center>
+        <h2>We begonnen eerst een groepje maken. Iedereen schreef zijn sterke punten op een papiertje, <br>
+        en we plakte het rond de lokaal. We gingen toen dan een papiertje zoeken waar je zelf dan nodig heb. <br>
+        Zoals, ik heb goed met computers, maar slechter in schrijven en formuleren. <br>
+        Ik zoek dan een blaadje waar schrijven op staat en ik ga vragen of we dan in een groepje samen mag. <br>
+        We kwamen uit eindelijk met het groepje: Stijn, Thom, Jakob en Kevin.</h2></center><br>
     <div class="row">
         <div class="column">
-            <br>
-            <img src="../Pictures/blaashal1.png" width="400px">
+            <img src="../Pictures/GemeenteAV.jpg" class="rounded-corners" width="400px">
         </div>
         <div class="column">
-            <h2>Myra geeft aan dat de energiekosten van de blaashal nu 16.000 euro per jaar zijn. <br>
-                In figuur 2 staat er stroom in kW per maand en een prijs die daaraan gekoppeld wordt, <br>
-                dit klopt met de prijs van stroom gegeven door Polyned als wij in plaats van kW rekenen <br>
-                met kWh dus een aanname die wij maken is dat hier kWh bedoeld wordt. Per maand wordt dus <br>
-                tussen 1800 en 2400 kWh gebruikt door de blazer van de blaashal en de lampen die in <br>
-                de blaashal opgehangen zijn. Ons idee is om deze stroom te produceren met zonnepanelen en met windmolens in plaats van het te kopen<br>
+            <h1>Het begin</h1>
+            <h2>We begonnen met een opdrachtgever zoeken, en we kwamen op de gemeente Amstelveen. <br>
+                We kregen de project, een skatepark naast stadshart vernieuwen en groener maken. <br>
+                Daar mee begon ons onderzoek.<br>
             </h2>
         </div>
     </div>
     <div class="row">
         <div class="column" style="margin-left: 7%;">
+            <h1>Ons idee voor energie</h1>
         <h2 style="font-size: 20px;">
-            <br><br>
-            Daarnaast werd er door Myra opgemerkt dat er veel mensen nodig zijn om de blaashal uit te rollen wanneer deze opgebouwd wordt. <br>
-            We bedachten daarom een stok met wielen die de opbouw makkelijker maakt. <br>
-            Die je in de mat steekt en gebruikt om de trekkracht even te verdelen. Deze stok is opvouwbaar, <br>
-            zodat je geen massief voorwerp hebt dat moeilijk is op te bergen. Als je de stok uitvouwt, <br>
-            is deze net zo breed als de mat, zo wordt de mat recht uitgerold. Dit zorgt ervoor dat er niet veel mensen nodig zijn om de mat uit te rollen
+        
+Ons idee is om de energiekosten te verminderen, omdat Myra had aangegeven dat deze te hoog zijn. <br>
+We willen dit bereiken door energie te generen via zonnepanelen en kleine turbines die energie opwekken voor de blaashal. <br>
+Deze opgewekte energie kan direct worden gebruikt of worden opgeslagen in batterijen voor later gebruik. <br>
+Een voorbeeld van zo'n batterij is die van SMA, die een 'home storage' batterij verkoopt voor ongeveer €900, <br>
+met een opslagcapaciteit van 3.28 kWh. Deze batterijen kunnen ook aan elkaar worden gekoppeld om een grotere opslagcapaciteit te creëren, <br>
+indien nodig. De grootste batterij die SMA verkoopt, kan maar liefst 16.4 kWh opslaan. <br>
+Dit zou voldoende zijn om de hele blaashal gedurende 6 uur van energie te voorzien. <br>
+Gelukkig zal er echter altijd ook stroom worden opgewekt door de turbines en zonnepanelen. <br>
+Dus het grootste deel van alle energie voor de blaashal zal gratis zijn aan gezien de <br>
+zonnepanelen in de wintermaanden maar liefst 3400kwh genereren wat opzicht, de windmolens <br>
+produceren als wij uitgaan van de gemiddelde windsnelhijd in de wintermaanden 42444kwh <br>
+wat 4x zo veel is als wat myra nu gebruikt. De overgebleven energie kan opgeslagen worden in een batterij of kan verkocht worden. De prijs van al dit is:<br>
+ Zonnepanelen €6.600<br>
+Batterij (optioneel) €900-€9000 verschilt per capaciteit<br>
+Windmolens €1200<br>
+Omvormer energie (SMA Sunny tripower x) €2000<br>
+Totaal: 18800 met batterij of 9800 zonder batterij<br>
+
         </h2>
         </div>
         <div class="column">
-            <img src="../Pictures/blaashal2.png" width="500px">
+            <br><br>
+            <img src="../Pictures/keuze1.JPG" class="rounded-corners" width="500px">
         </div>
     </div>
     <div class="row">
         <div class="column" style="margin-left: 7%;">
             <br><br>
-            <img src="../Pictures/blaashal3.gif" width="550px">    
+            <img src="../Pictures/veiligheid.png" class="rounded-corners" width="550px">    
         </div>
         <div class="column">
-            <h1>Tussenevaluatie</h1>
+            <h1>Veiligheid</h1>
             <h2 style="font-size: 20px;">
-                Op 5 december hadden we onze tussenevaluatie met de opdrachtgever. <br>
-                We presenteerden ons idee om de kosten te verlagen door zonnepanelen te gebruiken voor het opwekken van energie. <br>
-                Deze energie zou worden opgeslagen in een grote batterij die zich in een klein hokje naast de blaashal bevindt.<br>
-Daarnaast deelden we ons idee van de uitvouwbare stok om het opzetten gemakkelijker <br>
-te maken en het aantal mensen te verminderen in vergelijking met de huidige manier om de mat uit te rollen<br>
-Ons feedback was dat we goed op de kosten moesten letten van ons idee omdat het misschien <br>
-te veel kostte om een grote batterij en zonnepanelen te kopen vergeleken met hoeveel geld er hiermee bespaard zou kunnen worden.<br>
-We hadden na de tussen evaluatie gekozen voor een ander idee. De oude “sliding zonnepannel” <br>
-vonden we als laatst te duur en niet waard. We kozen toen voor een meer kost vriendelijke idee.<br>
-
+                Volgens het Warenwetbesluit attractie- en speeltoestellen (WAS) moeten de materialen en de constructie stabiel zijn.<br>
+                Ook moet er bescherming zijn tegen vallen en beknelling. Dit staat in de Nederlandse variant NEN-EN 1176-1:2017.<br>
+    Onder artikel 1 in de WAS staat dat de speeltoestellen alleen door zwaartekracht of fysieke kracht van de mens mogen werken. 
+    Mechanische en elektrische krachten worden niet toegestaan. 
+    In bijlage 1 van de WAS staat dat het toestel veilig afgesteld en onderhouden moet kunnen worden. <br>
+    Bij het ontwerpen en vervaardigen van een toestel moet je niet alleen uitgaan van een normaal gebruik van het toestel, <br>
+    maar ook van het redelijkerwijze te verwachten gebruik daarvan. Daarnaast moeten we rekening houden met <br>
+    specifieke het specifieke gedrag van kinderen en de ergonomie van de toestellen.
     
             </h2>
         </div>
