--- a/4deklas.html
+++ b/4deklas.html
@@ -34,7 +34,7 @@
     <div class="row">
       <div class="column">
         <h3><img src="Pictures/blaashal.png" class="rounded-corners" style="width:80%"></h3>
-        <h3><a href="Projecten/Flori1.html" class="button3">Lees meer</a></h3>
+        <h3><a href="Projecten/blaashal.html" class="button3">Lees meer</a></h3>
       </div>
       <div class="column">
         <h3><img src="Pictures/keuze1.JPG" class="rounded-corners" style="width:80%"></h3>
