--- a/Projecten/blaashal.html
+++ b/Projecten/blaashal.html
@@ -7,8 +7,6 @@
      crossorigin="anonymous"></script>
     <title>Blaashal</title>
 
-
-
 </head>
 
 <body>
@@ -36,8 +34,8 @@
     <br><br>
     <center><h1>Blaashal</h1>
         <br>
-        <h2>We kregen de project van myra om een blaashal opnieuw te ontwerpen. De oude koste veel energie en dus ook veel geld.</h2><br>
-        <h2>We begonnen dit project met brainstormen. <br>
+        <h2 style="margin-left: 10%; margin-right:10%;">We kregen de project van myra om een blaashal opnieuw te ontwerpen. De oude koste veel energie en dus ook veel geld.</h2><br>
+        <h2 style="margin-left: 10%; margin-right:10%;">We begonnen dit project met brainstormen. <br>
             We wilden ons focussen op het verminderen van kosten omdat Myra aangaf dat dat een van de grootse problemen was met de blaashal. <br>
             Om de kosten te verminderen van de blaashal zijn wij gaan kijken naar wat de grootste kosten van de blaashal nu zijn. (Figuur 1)</h2></center>
     <div class="row">
