--- a/index.html
+++ b/index.html
@@ -32,14 +32,16 @@
         <div class="slides">
           <div class="row">
             <div class="column">
-              <h2>Ik ben kevin, en ik kom uit China.
+              <h2 style="margin-left: 20%;">Ik ben kevin, en ik kom uit China.
                 Ik heb 4 jaar ervaring met Unity en C#<br>
                 Ik ben goed met Beta vakken, maar niet zo goed met talen.<br>
                 Ik speel veel heel veel games. Mijn meest gespeeld games zijn Apex legends en Doom eternal.
             </h2>
             </div>
             <div class="column">
-              <img src="Pictures/ik.jpg">
+              <h2>
+                <img src="Pictures/ik.jpg">
+              </h2>
             </div>
           </div>
         </div>
