--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="google-adsense-account" content="ca-pub-6490797898072451">
     <title>HOME</title>
     <link rel="icon" type="2825704.gif" href="2825704.gif">
     <link rel="stylesheet" href="style.css">
