--- a/1ste klas.html
+++ b/1ste klas.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
+    
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="2825704.gif" href="2825704.gif">
 <head>
+  <meta name="google-adsense-account" content="ca-pub-6490797898072451">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
     <title>Projecten eerste klas</title>
