--- a/4deklas.html
+++ b/4deklas.html
@@ -6,7 +6,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6490797898072451"
      crossorigin="anonymous"></script>
     <title>Projecten eerste klas</title>
-
+    <meta name="google-adsense-account" content="ca-pub-6490797898072451">
 </head>
 
 <body>
