--- a/Projecten/Keuze1.html
+++ b/Projecten/Keuze1.html
@@ -7,7 +7,7 @@
      crossorigin="anonymous"></script>
     <title>KeuzeProject</title>
 
-
+    <meta name="google-adsense-account" content="ca-pub-6490797898072451">
 
 </head>
 
