--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="1ste klas.html">Eerste klas</a>
                 <a href="2ste klas.html">Tweede klas</a>
                 <a href="3ste klas.html">Derde klas</a>
-                <a href="4deklas.html">Vierde klas</a>
+                <a href="4deklas.html">Vierde Klas</a>
               </div>
             </div>
           <a href="https://kamuistudio.itch.io/" class="button3">Itch.io</a>          
